# hamilton

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  add_service  add_service.sh  add_udev_rules.sh  build.rs  crates.js  deploy  deploy-camera-pi  deploy.sh  help.html  search-index.js  settings.html  source-files.js  src-files.js
arduino_firmware/controller_test/: controller_test.ino
arduino_firmware/dc_motor_controller/: Motor.h  dc_motor_controller.ino
arduino_firmware/maxon_hamilton/: maxon_hamilton.ino
arduino_firmware/stepper_hamilton/: stepper_hamilton.ino
arduino_firmware/stepper_hamilton_basic/: stepper_hamilton_basic.ino
arduino_firmware/testing/: testing.ino
config/: example_dc_wheel_config.json  example_wheel_config.json  map.json  settings.yaml
controller/: steam_test.py  test.py
debian/: service
hamilton/: Cargo.toml  all.html  index.html  macro.ioc_register!.html  macro.ioc_register.html  macro.ioc_register_arc!.html  macro.ioc_register_arc.html  macro.ioc_service!.html  macro.ioc_service.html  sidebar-items.js
hamilton/configuration/: index.html  sidebar-items.js  struct.AppConfig.html  struct.HamiltonZenohConfig.html
hamilton/driver/: enum.DriverType.html  fn.hamilton_driver_from_config.html  index.html  sidebar-items.js  struct.BodyConfig.html  struct.MotorCommand.html  struct.MotorConfig.html  trait.HamiltonDriver.html
hamilton/driver/hamilton_dc_driver/: enum.HamiltonError.html  index.html  sidebar-items.js  struct.HamiltonDcDriver.html  struct.HamiltonProtocol.html  struct.WireMoveCommand.html
hamilton/driver/hamilton_lss_driver/: index.html  sidebar-items.js  struct.HamiltonLssDriver.html  struct.LssWireMoveCommand.html
hamilton/error/: enum.ErrorWrapper.html  index.html  sidebar-items.js
hamilton/gamepad/: fn.start_gamepad_loop.html  index.html  sidebar-items.js
hamilton/holonomic_controller/: index.html  sidebar-items.js  struct.HolonomicWheelCommand.html  struct.MoveCommand.html
hamilton/ioc/: enum.IocContainerError.html  index.html  sidebar-items.js  struct.IocContainer.html
hamilton/lidar/: index.html  sidebar-items.js  struct.Lidar.html  struct.LidarConfig.html
hamilton/localisation/: enum.LocaliserType.html  index.html  sidebar-items.js  struct.LocalisationManager.html
hamilton/localisation/ir_tracker_localiser/: fn.create_localization_subscriber.html  index.html  sidebar-items.js  struct.IrTrackers.html
hamilton/localisation/openvr_localiser/: enum.VrDeviceClass.html  fn.create_localization_subscriber.html  fn.tracker_pose_to_plane.html  index.html  sidebar-items.js  struct.InputsState.html  struct.TrackedObjects.html  struct.VrDevice.html
hamilton/logging/: fn.setup_tracing.html  index.html
hamilton/map/: index.html  sidebar-items.js  struct.CanvasTouch.html  struct.Map.html
hamilton/navigation/: index.html  sidebar-items.js  struct.NavigationController.html  struct.Pose2d.html
hamilton/rviz_client/: index.html  sidebar-items.js  struct.RvizClient.html
hamilton/simple_collision_detector/: index.html  sidebar-items.js  struct.SimpleCollisionDetector.html
hamilton/src/: holonomic_controller.rs  ir_tracker_localiser.rs  lib.rs  lidar.rs  navigation.rs  rviz_client.rs  simple_collision_detector.rs  util.rs
hamilton/src/driver/: hamilton_lss_driver.rs  mod.rs
hamilton/src/localisation/: ir_tracker_localiser.rs  mod.rs
hamilton/util/: fn.latest_value_channel.html  index.html  sidebar-items.js  struct.LatestReceiver.html  struct.LatestSender.html
hamilton_controller/: all.html  fn.main.html  index.html  struct.Args.html
implementors/clap/derive/: trait.Args.js  trait.Clap.js  trait.FromArgMatches.js  trait.IntoApp.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
lidar_driver/: all.html  fn.main.html  fn.wait_for_enter.html  index.html  sidebar-items.js  struct.Args.html
localisation_test/: all.html  fn.main.html  index.html  struct.Args.html
old/controller/: setup.py
remote-controller/: Cargo.toml  README.md
remote-controller/examples/: simple.rs
remote-controller/src/: controller_service.rs  lib.rs
remote-controller/static/: debounce.js  gamepad.js  navigation.html  touchControl.js
remote_controller/: all.html  fn.start_remote_controller_server.html  fn.start_remote_controller_server_with_map.html  index.html  sidebar-items.js  struct.Action.html  struct.ActionIdWrapper.html  struct.ActionList.html  struct.AreaSize.html  struct.CanvasTouch.html  struct.ControllerState.html  struct.GamepadCommand.html
remote_controller/controller_service/: struct.Action.html  struct.ActionIdWrapper.html  struct.ActionList.html  struct.CanvasTouch.html  struct.ControllerState.html  struct.GamepadCommand.html
search.desc/hamilton/: hamilton-desc-0-.js
search.desc/vehicle_config_test/: vehicle_config_test-desc-0-.js
src/: configuration.rs  driver.rs  holonomic_controller.rs  ioc.rs  ir_tracker_localiser.rs  lib.rs  lidar.rs  localiser.rs  logging.rs  main.rs  map.rs  navigation.rs
src/driver/: hamilton_dc_driver.rs  hamilton_lss_driver.rs  lss_driver.rs  mod.rs  stepper_driver.rs
src/gamepad/: messages.rs  mod.rs
src/hamilton/: configuration.rs.html  error.rs.html  holonomic_controller.rs.html  ioc.rs.html  lib.rs.html  lidar.rs.html  logging.rs.html  map.rs.html  navigation.rs.html  rviz_client.rs.html  simple_collision_detector.rs.html  util.rs.html
src/hamilton_controller/: hamilton_controller.rs.html
src/lidar_driver/: lidar_driver.rs.html
src/localisation/: ir_tracker_localiser.rs  openvr_localiser.rs
src/localisation_test/: localisation_test.rs.html
src/remote_controller/: controller_service.rs.html  lib.rs.html
src/vehicle_config_test/: vehicle_config_test.rs.html
vehicle_config_test/: all.html  fn.main.html  fn.move_test.html  fn.wheels_test.html  index.html  sidebar-items.js  struct.Args.html  struct.MoveCommand.html
(+58 files in other folders)
