[package]
name = "hamilton"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"
default-run = "hamilton_controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# I think these bin entiers don't actually have to be here anymore
[[bin]]
name = "hamilton_controller"

[[bin]]
name = "hamilton_guppy_controller"

[[bin]]
name = "vehicle_config_test"

[[bin]]
name = "localization_receiver"

[[bin]]
name = "hamilton_web_controller"

[[bin]]
name = "hamilton_web_remote"

[[bin]]
name = "ducky_follower"

[dependencies]
tonic = "0.4"
tokio = { version = "1.0", features = ["macros", "time", "rt-multi-thread"] }
prost = "0.7"
clap = "3.0.0-beta.1"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "3.0"
lss_driver = "0.6.0"
guppy-grpc = { git = "https://github.com/dmweis/guppy", branch = "main" }
tracing = "0.1"
tracing-subscriber = "0.2"
remote-controller = { git = "https://github.com/dmweis/remote-controller", branch = "main" }
socket2 = "0.3"
nalgebra = { version = "0.25", features = ["serde-serialize"] }
ctrlc = "3.1"
async-trait = "0.1"

tokio-serial = { version = "5.4", default-features = false }
bytes = "1.0"
tokio-util = { version = "0.6", features = ["codec"], default-features = false }
futures = "0.3"
postcard-cobs = "0.2.0"


[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }

[dev-dependencies]
approx = "0.4"
