[package]
name = "hamilton"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.12", features = ["macros", "time", "rt-multi-thread"] }
clap = "3.0.0-beta.4"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
lss_driver = "0.6.0"
tracing = "0.1"
tracing-subscriber = "0.2"
remote-controller = { path = "../remote-controller" }
socket2 = "0.3"
nalgebra = { version = "0.26", features = ["serde-serialize"] }
ctrlc = "3.1"
async-trait = "0.1"
tokio-serial = { version = "5.4", default-features = false }
bytes = "1.0"
tokio-util = { version = "0.6", features = ["codec"], default-features = false }
futures = "0.3"
postcard-cobs = "0.2.0"
pose-publisher = { git = "https://github.com/dmweis/rustviz", branch = "main" }
rplidar_driver = { git = "https://github.com/dmweis/rplidar_driver", branch = "main" }

[dev-dependencies]
approx = "0.4"
