[package]
name = "remote-controller"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
include_dir = "0.6.0"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.2"

[build-dependencies]
ureq = "2.2"
